data/derived/fa15/progs/unify/prog2481.ml.out
Characters 45-46:
  let f a x = let rec a c y = c a x in a::x = fs in
                                ^
Error: This expression has type ('a -> 'b -> 'c) -> 'd -> 'e
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> 'b -> 'c) -> 'd -> 'e
